#==============================================================
#
#  Name: RELEASE_NOTES
#
#  Rem:  This files describes release notes for
#        the general Oscilloscope IOC Application, using
#        scope-asyn module based on Zen's general scope support.
#
#==============================================================

R1.2.1      20-Jun-2023  M. Dunning (mdunning)
            LCLS: Fix node names in sioc-sys0-sc01
            LCLS: Use rhel7 binary in startup script shebangs
            All: Clean up startup scripts and db files 

R1.2.0      08-Jun-2023  M. Dunning (mdunning)
            All: Upgrade to scope-asyn R1.5.0
                 Add support for MDO34 scope; add dev IOC sioc-b34-sc02
                 Merge binaries; scope module is fixed
                 Clean up src/Makefile

R1.1.2      15-May-2023, S. Alverson (alverson):
            LCLS: Adding scop-lgun-ls03 in S0 Laser Room (sioc-lgun-sc01)

R1.1.1      07-Feb-2023, K. Luchini  (luchini):
            COMMON: remove unused variables from CONFIG_STE
            LINUX_KERNEL_MODULES and LINUXRT_BUILDROOT_VERSION=

R1.1.0      S. Alverson (alverson):
            All: Added Rigol scope support, required separating out binaries per device type (tds, ds1, ds6)
                 C code support should be cleaned up so that this is not necessary

R1.0.13      S. Alverson (alverson):
18-Jan-2023  LCLS: Add scop-lhtr-ls10 to sioc-lhtr-sc10

R1.0.12      S. Alverson (alverson):
29-Jul-2022  LCLS: Add scop-lgun-ls01 to sioc-lgun-sc01

R1.0.11      M. Dunning (mdunning):
04-Apr-2022  All: Upgrade to scope-asyn R1.4.0
                  Make scope reboot optional in tds.cmd.  DPO2x scope doesn't seem to need this.
             Dev: Add IOCs for b15 and b34.

R1.0.10      G. Brown (gwbrown):
7-Mar-2022   FACET: Add IN10 laser room scope

R1.0.9       G. Brown (gwbrown):
14-Feb-2022  LCLS: Add Beam Offset Monitor scope scop-amrf-rf03. Update modules. Correct subsystem.

R1.0.8       G. Brown (gwbrown):